<resources>
    <string name="app_name">Swapp</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="facebook_app_id">997317660321223</string>
    <string name="forgot_pass">¿Olvidaste tu contraseña?</string>
    <string name="password_hint">Contraseña</string>
    <string name="email_hint">Email</string>
    <string name="email_sign_up">¿No tienes una cuenta? Regístrate aquí.</string>
    <string name="swap_icon">swap_icon</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
</resources>
